different background position

--- a/app.css
+++ b/app.css
@@ -8485,8 +8485,10 @@ th.hide-for-touch {
   margin: 0;
   width: 100%;
   height: 300px;
-  background: url("/images/constr.jpg") no-repeat center bottom fixed; }
-  /* line 247, stdin */
+  background: url("/images/constr.jpg") no-repeat fixed;
+  background-size: 100%;
+  background-position: 100% 50%; }
+  /* line 249, stdin */
   .out-of-grid img {
     position: absolute;
     width: 18rem;
@@ -8494,7 +8496,7 @@ th.hide-for-touch {
     bottom: 0;
     right: 0;
     left: 0; }
-  /* line 256, stdin */
+  /* line 258, stdin */
   .out-of-grid #home-heading h3 {
     position: absolute;
     bottom: -0.5rem;
@@ -8506,7 +8508,7 @@ th.hide-for-touch {
     .out-of-grid {
       height: 600px; } }
 
-/* line 269, stdin */
+/* line 271, stdin */
 .content-wrap {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8522,7 +8524,7 @@ th.hide-for-touch {
   .content-wrap:after {
     clear: both; }
 
-/* line 276, stdin */
+/* line 278, stdin */
 .overlay-content {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8530,13 +8532,13 @@ th.hide-for-touch {
   float: left;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%); }
-  /* line 278, stdin */
+  /* line 280, stdin */
   .overlay-content h1 {
     color: #FFFFFF;
     font-weight: bold;
     text-align: center; }
 
-/* line 288, stdin */
+/* line 290, stdin */
 h1, h2, h3, h4, h5, h6 {
   text-align: center;
   text-transform: uppercase;
@@ -8544,28 +8546,28 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-font-smoothing: antialiased;
   color: #FFFFFF; }
 
-/* line 296, stdin */
+/* line 298, stdin */
 p {
   text-align: center;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased; }
 
-/* line 302, stdin */
+/* line 304, stdin */
 em {
   color: #222222;
   font-style: normal;
   font-weight: bold; }
 
-/* line 308, stdin */
+/* line 310, stdin */
 section.brown-info {
   margin: 0;
   width: 100%;
   background-color: #563f2d; }
-  /* line 312, stdin */
+  /* line 314, stdin */
   section.brown-info h1, section.brown-info p {
     color: #FFFFFF; }
 
-/* line 317, stdin */
+/* line 319, stdin */
 .home-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8577,18 +8579,18 @@ section.brown-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   .home-info:after {
     clear: both; }
-  /* line 319, stdin */
+  /* line 321, stdin */
   .home-info p {
     margin-top: 2rem;
     margin-bottom: 2rem; }
-  /* line 323, stdin */
+  /* line 325, stdin */
   .home-info #home-content {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
     width: 100%;
     float: left; }
     @media only screen and (min-width: 64.063em) {
-      /* line 323, stdin */
+      /* line 325, stdin */
       .home-info #home-content {
         display: block;
         padding-left: 0.9375rem;
@@ -8599,7 +8601,7 @@ section.brown-info {
         margin-right: auto;
         float: none; } }
 
-/* line 332, stdin */
+/* line 334, stdin */
 section.white-info {
   margin: 0;
   width: 100%;
@@ -8607,13 +8609,13 @@ section.white-info {
   position: relative;
   padding-top: 2rem; }
   @media only screen and (min-width: 64.063em) {
-    /* line 332, stdin */
+    /* line 334, stdin */
     section.white-info {
       min-height: 43.75rem; } }
-  /* line 341, stdin */
+  /* line 343, stdin */
   section.white-info h1, section.white-info h2, section.white-info h3, section.white-info p {
     color: #222222; }
-  /* line 344, stdin */
+  /* line 346, stdin */
   section.white-info .gray-block {
     position: absolute;
     top: 50%;
@@ -8623,11 +8625,11 @@ section.white-info {
     background-color: #a0a8a0;
     display: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 344, stdin */
+      /* line 346, stdin */
       section.white-info .gray-block {
         display: block; } }
 
-/* line 358, stdin */
+/* line 360, stdin */
 #att-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8640,14 +8642,14 @@ section.white-info {
   #att-info:after {
     clear: both; }
 
-/* line 362, stdin */
+/* line 364, stdin */
 #att-info-inner {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
   width: 100%;
   float: left; }
   @media only screen and (min-width: 64.063em) {
-    /* line 362, stdin */
+    /* line 364, stdin */
     #att-info-inner {
       display: block;
       padding-left: 0.9375rem;
@@ -8658,7 +8660,7 @@ section.white-info {
       margin-right: auto;
       float: none; } }
 
-/* line 370, stdin */
+/* line 372, stdin */
 #info-blocks {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8672,7 +8674,7 @@ section.white-info {
   #info-blocks:after {
     clear: both; }
 
-/* line 375, stdin */
+/* line 377, stdin */
 .info-block {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8683,16 +8685,16 @@ section.white-info {
   background: none;
   padding-bottom: 2rem;
   border: 0px solid #FFFFFF; }
-  /* line 382, stdin */
+  /* line 384, stdin */
   .info-block h3 {
     margin-top: 1rem;
     margin-bottom: 0;
     text-transform: uppercase;
     color: #222222; }
-  /* line 388, stdin */
+  /* line 390, stdin */
   .info-block p {
     margin-bottom: 1rem; }
-  /* line 391, stdin */
+  /* line 393, stdin */
   .info-block a.bio {
     display: block;
     width: 10rem;
@@ -8708,54 +8710,54 @@ section.white-info {
     text-transform: uppercase;
     -webkit-transition: background-color 0.5s ease-in-out;
             transition: background-color 0.5s ease-in-out; }
-    /* line 405, stdin */
+    /* line 407, stdin */
     .info-block a.bio:hover {
       background-color: #a0a8a0; }
-  /* line 409, stdin */
+  /* line 411, stdin */
   .info-block .fa {
     margin: 1rem 0 0 0;
     color: #563f2d;
     font-size: 2rem;
     -webkit-transition: background-color 0.5s ease-in-out;
             transition: background-color 0.5s ease-in-out; }
-    /* line 414, stdin */
+    /* line 416, stdin */
     .info-block .fa:hover {
       color: #a0a8a0; }
   @media only screen and (min-width: 64.063em) {
-    /* line 375, stdin */
+    /* line 377, stdin */
     .info-block {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       width: 33.33333%;
       float: left;
       padding: 0; }
-      /* line 422, stdin */
+      /* line 424, stdin */
       .info-block:hover .showme {
         max-height: 10rem;
         visibility: visible; }
-      /* line 426, stdin */
+      /* line 428, stdin */
       .info-block:hover .info-bottom-arrow {
         display: none; } }
   @media only screen and (min-width: 64.063em) {
-    /* line 431, stdin */
+    /* line 433, stdin */
     .info-block .inner {
       background-color: #FFFFFF;
       position: relative;
       border-radius: 10px;
       margin: 2rem;
       padding: 0 0 2rem 0; }
-      /* line 439, stdin */
+      /* line 441, stdin */
       .info-block .inner img {
         padding: 1rem; } }
 
-/* line 446, stdin */
+/* line 448, stdin */
 a:hover {
   color: #a0a8a0; }
 
-/* line 450, stdin */
+/* line 452, stdin */
 .bio-modal {
   padding: 0; }
-  /* line 452, stdin */
+  /* line 454, stdin */
   .bio-modal .bio-header {
     background-color: #a0a8a0;
     margin: 0 auto;
@@ -8768,7 +8770,7 @@ a:hover {
     /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
     .bio-modal .bio-header:after {
       clear: both; }
-    /* line 455, stdin */
+    /* line 457, stdin */
     .bio-modal .bio-header h3 {
       display: block;
       padding-top: 1rem;
@@ -8780,7 +8782,7 @@ a:hover {
       float: left;
       color: #FFFFFF;
       text-transform: uppercase; }
-  /* line 467, stdin */
+  /* line 469, stdin */
   .bio-modal .bio-info {
     margin: 0 auto;
     max-width: 62.5rem;
@@ -8792,7 +8794,7 @@ a:hover {
     /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
     .bio-modal .bio-info:after {
       clear: both; }
-    /* line 469, stdin */
+    /* line 471, stdin */
     .bio-modal .bio-info .bio-cv {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
@@ -8800,7 +8802,7 @@ a:hover {
       float: left;
       padding: 3rem; }
       @media only screen and (min-width: 64.063em) {
-        /* line 469, stdin */
+        /* line 471, stdin */
         .bio-modal .bio-info .bio-cv {
           position: relative;
           padding-left: 0.9375rem;
@@ -8809,26 +8811,26 @@ a:hover {
           right: 25%;
           left: auto;
           float: left; } }
-    /* line 476, stdin */
+    /* line 478, stdin */
     .bio-modal .bio-info .bio-extra {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       width: 100%;
       float: left;
       text-align: center; }
-      /* line 480, stdin */
+      /* line 482, stdin */
       .bio-modal .bio-info .bio-extra p {
         font-weight: bolder;
         text-align: center;
         margin-bottom: 0; }
-      /* line 485, stdin */
+      /* line 487, stdin */
       .bio-modal .bio-info .bio-extra img {
         margin-bottom: 1rem; }
-      /* line 488, stdin */
+      /* line 490, stdin */
       .bio-modal .bio-info .bio-extra h1, .bio-modal .bio-info .bio-extra h2, .bio-modal .bio-info .bio-extra h3, .bio-modal .bio-info .bio-extra h4, .bio-modal .bio-info .bio-extra h5, .bio-modal .bio-info .bio-extra h6 {
         color: #222222; }
       @media only screen and (min-width: 64.063em) {
-        /* line 476, stdin */
+        /* line 478, stdin */
         .bio-modal .bio-info .bio-extra {
           position: relative;
           padding-left: 0.9375rem;
@@ -8838,19 +8840,19 @@ a:hover {
           right: auto;
           float: left;
           padding: 0; } }
-  /* line 497, stdin */
+  /* line 499, stdin */
   .bio-modal a.close-reveal-modal {
     color: #222222; }
-  /* line 500, stdin */
+  /* line 502, stdin */
   .bio-modal p {
     color: #222222;
     text-align: left;
     font-size: 1rem; }
-  /* line 505, stdin */
+  /* line 507, stdin */
   .bio-modal em {
     font-weight: bold;
     font-style: normal; }
-  /* line 509, stdin */
+  /* line 511, stdin */
   .bio-modal .fa {
     margin: 1rem 0 0 0;
     color: #563f2d;
@@ -8858,11 +8860,11 @@ a:hover {
     text-align: center;
     -webkit-transition: background-color 0.5s ease-in-out;
             transition: background-color 0.5s ease-in-out; }
-    /* line 515, stdin */
+    /* line 517, stdin */
     .bio-modal .fa:hover {
       color: #a0a8a0; }
 
-/* line 521, stdin */
+/* line 523, stdin */
 .info-bottom-arrow {
   display: none;
   position: absolute;
@@ -8871,10 +8873,10 @@ a:hover {
   text-align: center;
   background: none; }
   @media only screen and (min-width: 64.063em) {
-    /* line 521, stdin */
+    /* line 523, stdin */
     .info-bottom-arrow {
       display: block; } }
-  /* line 531, stdin */
+  /* line 533, stdin */
   .info-bottom-arrow .fa {
     color: #222222;
     background-color: #FFFFFF;
@@ -8885,7 +8887,7 @@ a:hover {
     border-radius: 50%; }
 
 @media only screen and (min-width: 64.063em) {
-  /* line 542, stdin */
+  /* line 544, stdin */
   .showme {
     max-height: 0;
     overflow: hidden;
@@ -8893,12 +8895,12 @@ a:hover {
     -webkit-transition: visibility 0s, max-height 0.5s ease-in-out;
             transition: visibility 0s, max-height 0.5s ease-in-out; } }
 
-/* line 551, stdin */
+/* line 553, stdin */
 #practice {
   background: url("/images/wood.jpg");
   background-size: cover; }
 
-/* line 556, stdin */
+/* line 558, stdin */
 #practice-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8915,11 +8917,11 @@ a:hover {
   #practice-contain:after {
     clear: both; }
   @media only screen and (min-width: 64.063em) {
-    /* line 556, stdin */
+    /* line 558, stdin */
     #practice-contain {
       padding-left: 0;
       padding-right: 0; } }
-  /* line 566, stdin */
+  /* line 568, stdin */
   #practice-contain #description {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8927,33 +8929,33 @@ a:hover {
     float: left;
     padding: 2rem;
     background: #FFFFFF; }
-    /* line 570, stdin */
+    /* line 572, stdin */
     #practice-contain #description h1, #practice-contain #description h2, #practice-contain #description h3, #practice-contain #description h4 {
       color: #222222;
       text-align: left; }
-    /* line 574, stdin */
+    /* line 576, stdin */
     #practice-contain #description p {
       color: #222222;
       text-align: left; }
-    /* line 578, stdin */
+    /* line 580, stdin */
     #practice-contain #description ul {
       color: #a0a8a0;
       list-style: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 566, stdin */
+      /* line 568, stdin */
       #practice-contain #description {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         width: 58.33333%;
         float: left;
         padding: 2rem; } }
-  /* line 587, stdin */
+  /* line 589, stdin */
   #practice-contain #pretty {
     display: none;
     background: url("/images/image4.jpg");
     background-size: cover; }
     @media only screen and (min-width: 64.063em) {
-      /* line 587, stdin */
+      /* line 589, stdin */
       #practice-contain #pretty {
         display: block;
         padding-left: 0.9375rem;
@@ -8964,12 +8966,12 @@ a:hover {
 /*
    FOOTER SECTION
    ========================================================================== */
-/* line 603, stdin */
+/* line 605, stdin */
 input[type=text], textarea {
   color: #a0a8a0;
   border-radius: 10px; }
 
-/* line 608, stdin */
+/* line 610, stdin */
 input::-webkit-input-placeholder {
   color: #a0a8a0; }
 input::-moz-placeholder {
@@ -8979,7 +8981,7 @@ input:-ms-input-placeholder {
 input::placeholder {
   color: #a0a8a0; }
 
-/* line 612, stdin */
+/* line 614, stdin */
 textarea::-webkit-input-placeholder {
   color: #a0a8a0; }
 textarea::-moz-placeholder {
@@ -8989,11 +8991,11 @@ textarea:-ms-input-placeholder {
 textarea::placeholder {
   color: #a0a8a0; }
 
-/* line 616, stdin */
+/* line 618, stdin */
 textarea {
   min-height: 10rem; }
 
-/* line 620, stdin */
+/* line 622, stdin */
 button#submit-button {
   padding: 0;
   margin: 1rem 0 0 0;
@@ -9002,24 +9004,24 @@ button#submit-button {
   background-color: #a0a8a0;
   border-radius: 50%;
   font-size: 1.5rem; }
-  /* line 628, stdin */
+  /* line 630, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 633, stdin */
+/* line 635, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 636, stdin */
+  /* line 638, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 640, stdin */
+  /* line 642, stdin */
   .footer-section h1, .footer-section h2, .footer-section h3 {
     color: #a0a8a0;
     margin-bottom: 2rem; }
 
-/* line 646, stdin */
+/* line 648, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -9035,7 +9037,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 653, stdin */
+/* line 655, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -9047,7 +9049,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 662, stdin */
+/* line 664, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -9055,7 +9057,7 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 670, stdin */
+/* line 672, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -9068,7 +9070,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 673, stdin */
+  /* line 675, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9079,7 +9081,7 @@ section#contact {
     float: none;
     text-align: center; }
     @media only screen and (min-width: 64.063em) {
-      /* line 673, stdin */
+      /* line 675, stdin */
       #contact-contain .contact-form {
         display: block;
         padding-left: 0.9375rem;
@@ -9090,15 +9092,15 @@ section#contact {
         margin-right: auto;
         float: none; } }
 
-/* line 683, stdin */
+/* line 685, stdin */
 #contact-success {
   background-color: #563f2d;
   border: none; }
-  /* line 686, stdin */
+  /* line 688, stdin */
   #contact-success h2 {
     text-align: center; }
 
-/* line 691, stdin */
+/* line 693, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -9110,13 +9112,13 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 693, stdin */
+  /* line 695, stdin */
   #lp-info-contain img {
     display: block;
     margin: auto;
     margin-top: 2rem;
     max-width: 4rem; }
-  /* line 699, stdin */
+  /* line 701, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9126,7 +9128,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 699, stdin */
+      /* line 701, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
