--- a/scss/app.scss
+++ b/scss/app.scss
@@ -243,7 +243,9 @@ $xxlarge-range: (120.063em, 99999999em);
   margin: 0;
   width: 100%;
   height: 300px;
-  background: url("/images/constr.jpg") no-repeat center bottom fixed;
+  background: url("/images/constr.jpg") no-repeat fixed;
+  background-size: 100%;
+  background-position: 100% 50%;
   img{
     position: absolute;
     width: 18rem;
