--- a/app.css
+++ b/app.css
@@ -8486,7 +8486,7 @@ th.hide-for-touch {
   width: 100%;
   height: 300px;
   background: url("/images/constr.jpg") no-repeat fixed;
-  background-size: 100%;
+  background-size: auto;
   background-position: 50% 100%; }
   /* line 249, stdin */
   .out-of-grid img {
