--- a/scss/app.scss
+++ b/scss/app.scss
@@ -244,7 +244,7 @@ $xxlarge-range: (120.063em, 99999999em);
   width: 100%;
   height: 300px;
   background: url("/images/constr.jpg") no-repeat fixed;
-  background-size: 100%;
+  background-size: auto;
   background-position: 50% 100%;
   img{
     position: absolute;
