--- a/app.css
+++ b/app.css
@@ -8485,8 +8485,8 @@ th.hide-for-touch {
   margin: 0;
   width: 100%;
   height: 300px;
-  background: url("/images/constr.jpg") no-repeat fixed;
-  background-size: auto;
+  background: url("/images/cover-2.jpg") no-repeat fixed;
+  background-size: cover;
   background-position: 50% 100%; }
   /* line 249, stdin */
   .out-of-grid img {
