--- a/scss/app.scss
+++ b/scss/app.scss
@@ -243,8 +243,8 @@ $xxlarge-range: (120.063em, 99999999em);
   margin: 0;
   width: 100%;
   height: 300px;
-  background: url("/images/constr.jpg") no-repeat fixed;
-  background-size: auto;
+  background: url("/images/cover-2.jpg") no-repeat fixed;
+  background-size: cover;
   background-position: 50% 100%;
   img{
     position: absolute;
