--- a/scss/app.scss
+++ b/scss/app.scss
@@ -243,9 +243,9 @@ $xxlarge-range: (120.063em, 99999999em);
   margin: 0;
   width: 100%;
   height: 300px;
-  background: url("/images/cover-2.jpg") no-repeat fixed;
+  background: url("/images/cover-3.jpg") no-repeat;
+  background-attachment: scroll;
   background-size: cover;
-  background-position: 50% 100%;
   img{
     position: absolute;
     width: 18rem;
@@ -264,6 +264,10 @@ $xxlarge-range: (120.063em, 99999999em);
     }
   }
   @media #{$large-up}{
+    background: url("/images/cover-2.jpg") no-repeat;
+    background-size: auto;
+    background-attachment: fixed;
+    background-position: 50% 30%;
     height: 600px;
   }
 }
