--- a/scss/app.scss
+++ b/scss/app.scss
@@ -422,7 +422,7 @@ section.white-info{
     }
   }
   @media #{$large-up}{
-    @include grid-column(4);
+    @include grid-column(4, $push:2);
     padding: 0;
     &:hover{
       .showme{
